--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div class="field">
+    <%= f.label :adress %><br />
+    <%= f.text_area :adress %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
