--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,18 @@
+<h1><%= t('.title') %></h1>
+
+<p>
+  <strong><%= User.human_attribute_name(:email) %>:</strong>
+  <%= @user.email %>
+</p>
 <p>
   <strong><%= User.human_attribute_name(:name) %>:</strong>
   <%= @user.name %>
+</p>
+<p>
+  <strong><%= User.human_attribute_name(:adress) %>:</strong>
+  <%= @user.adress %>
+</p>
+<p>
+  <strong><%= User.human_attribute_name(:introduction) %>:</strong>
+  <%= @user.introduction %>
 </p>
