--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,14 @@
     <% end %>
     <p class="navbar-text pull-right">
     <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path, class: 'navbar-link' %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'navbar-link'  %>
+      <%= t('.login_user') %> <strong><%= current_user.email %></strong>
+      <%= link_to t('.book_list'), books_path, class: 'navbar-link'  %>
+      <%= link_to t('.user_list'), users_path, class: 'navbar-link'  %>
+      <%= link_to t('.edit'), edit_user_registration_path, class: 'navbar-link' %> |
+      <%= link_to t('common.logout'), destroy_user_session_path, method: :delete, class: 'navbar-link'  %>
     <% else %>
-      <%= link_to "Sign up", new_user_registration_path, class: 'navbar-link'  %> |
-      <%= link_to "Login", new_user_session_path, class: 'navbar-link'  %>
+      <%= link_to t('common.sign_up'), new_user_registration_path, class: 'navbar-link'  %> |
+      <%= link_to t('common.login'), new_user_session_path, class: 'navbar-link'  %>
     <% end %>
   </p>
     <%= yield %>
