--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th><%= User.human_attribute_name(:email) %></th>
       <th><%= User.human_attribute_name(:name) %></th>
+      <th><%= User.human_attribute_name(:postal_code) %></th>
       <th><%= User.human_attribute_name(:adress) %></th>
       <th><%= User.human_attribute_name(:introduction) %></th>
     </tr>
@@ -15,6 +16,7 @@
       <tr>
         <td><%= user.email %></td>
         <td><%= user.name %></td>
+        <td><%= user.postal_code %></td>
         <td><%= user.adress %></td>
         <td><%= user.introduction %></td>
         <td><%= link_to t('views.common.show'), user %></td>
