--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,10 @@
   <%= @user.name %>
 </p>
 <p>
+  <strong><%= User.human_attribute_name(:postal_code) %>:</strong>
+  <%= @user.postal_code %>
+</p>
+<p>
   <strong><%= User.human_attribute_name(:adress) %>:</strong>
   <%= @user.adress %>
 </p>
