--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong><%= User.human_attribute_name(:avatar) %>:</strong>
-  <%= image_tag @user.avatar %>
+  <%= image_tag @user.avatar if @user.avatar.attached? %>
 </p>
 
 <p>
