--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
   <div class="field">
     <%= f.label :avatar %><br />
     <%= image_tag resource.avatar.variant(resize:'300x300').processed if resource.avatar.attached? %><br />
-    <%= f.file_field :avatar, direct_upload: true %>
+    <%= f.file_field :avatar, direct_upload: true, accept: 'image/jpg,image/png,image/gif' %>
   </div>
 
   <div class="field">
