--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
 
   <div class="field">
     <%= f.label :avatar %><br />
-    <%= f.file_field :avatar %>
+    <%= f.file_field :avatar, accept: 'image/jpg,image/png,image/gif' %>
   </div>
 
   <div class="actions">
