--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
       <th><%= User.human_attribute_name(:email) %></th>
       <th><%= User.human_attribute_name(:name) %></th>
       <th><%= User.human_attribute_name(:postal_code) %></th>
-      <th><%= User.human_attribute_name(:adress) %></th>
+      <th><%= User.human_attribute_name(:address) %></th>
       <th><%= User.human_attribute_name(:introduction) %></th>
     </tr>
   </thead>
@@ -17,7 +17,7 @@
         <td><%= user.email %></td>
         <td><%= user.name %></td>
         <td><%= user.postal_code %></td>
-        <td><%= user.adress %></td>
+        <td><%= user.address %></td>
         <td><%= user.introduction %></td>
         <td><%= link_to t('views.common.show'), user %></td>
       </tr>
