--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,8 +13,8 @@
   <%= @user.postal_code %>
 </p>
 <p>
-  <strong><%= User.human_attribute_name(:adress) %>:</strong>
-  <%= @user.adress %>
+  <strong><%= User.human_attribute_name(:address) %>:</strong>
+  <%= @user.address %>
 </p>
 <p>
   <strong><%= User.human_attribute_name(:introduction) %>:</strong>
