--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,24 @@
   <% end %>
 </p>
 
+<% if current_user != @user %>
+  <% if current_user.following?(@user) %>
+    <%= link_to 'フォロー解除', user_relationships_path(@user.id), method: :delete %>
+  <% else %>
+    <%= link_to 'フォロー', user_relationships_path(@user.id), method: :POST %>
+  <% end %>
+<% end %>
+
+<p>
+  <strong><%= t('.followed_count') %>:</strong>
+  <%= @following_users.count %>
+</p>
+
+<p>
+  <strong><%= t('.follower_count') %>:</strong>
+  <%= @follower_users.count %>
+</p>
+
 <% if current_user == @user %>
   <%= link_to t('views.common.edit'), edit_user_registration_path %> |
 <% end %>
