--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,9 +35,9 @@
 
 <% if current_user != @user %>
   <% if current_user.following?(@user) %>
-    <%= link_to 'フォロー解除', user_relationships_path(@user.id), method: :delete %>
+    <%= link_to 'フォロー解除', user_followsrelationships_path(@user.id), method: :delete %>
   <% else %>
-    <%= link_to 'フォロー', user_relationships_path(@user.id), method: :POST %>
+    <%= link_to 'フォロー', user_followsrelationships_path(@user.id), method: :POST %>
   <% end %>
 <% end %>
 
