[update] フォロー一覧、フォロワー一覧画面作成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,13 +42,17 @@
 <% end %>
 
 <p>
+  <%= link_to user_follows_path(@user) do %>
   <strong><%= t('.followed_count') %>:</strong>
   <%= @following_users.count %>
+  <% end %>
 </p>
 
 <p>
+  <%= link_to user_followers_path(@user) do %>
   <strong><%= t('.follower_count') %>:</strong>
   <%= @follower_users.count %>
+  <% end %>
 </p>
 
 <% if current_user == @user %>
