--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
   <% if current_user.following?(@user) %>
     <%= link_to 'フォロー解除', user_followsrelationships_path(@user), method: :delete %>
   <% else %>
-    <%= link_to 'フォロー', user_followsrelationships_path(@user), method: :POST %>
+    <%= link_to 'フォロー', user_followsrelationships_path(@user), method: :post %>
   <% end %>
 <% end %>
 
