--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -10,5 +10,7 @@
   <%= @report.contents %>
 </p>
 
+<%= render 'comments/form', commentable: @report %>
+
 <%= link_to t('views.common.edit'), edit_report_path(@report) %> |
 <%= link_to t('views.common.back'), reports_path %>
