--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,15 +1,7 @@
-<h1><%= t('views.common.title_show', name: Report.model_name.human) %></h1>
+<h1><%= @report.title %></h1>
+<h2><%= simple_format(@report.contents) %></h2>
 
-<p>
-  <strong><%= Report.human_attribute_name(:title) %>:</strong>
-  <%= @report.title %>
-</p>
-
-<p>
-  <strong><%= Report.human_attribute_name(:memo) %>:</strong>
-  <%= @report.contents %>
-</p>
-
+<%= render 'comments/comments_form' %>
 <%= render 'comments/form', commentable: @report %>
 
 <%= link_to t('views.common.edit'), edit_report_path(@report) %> |
