--- a/app/views/comments/_comments_form.html.erb
+++ b/app/views/comments/_comments_form.html.erb
@@ -2,7 +2,7 @@
   <% @comments.each do |comment| %>
     <tr>
       <th align="left"><%= user_name_or_email(comment) %></th>
-      <th><%= comment.updated_at %></th>
+      <th><%= l comment.updated_at, format: :long %></th>
     </tr>
     <tr>
       <td><%= simple_format(comment.comment_contents) %></td>
