[update] titleをi18n対応

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :comment_contents %>
+    <%= form.label t('.title') %>
     <%= form.text_area :comment_contents %>
   </div>
 
