[update] 自分自身が投稿したコメントのみ削除可能

--- a/app/views/comments/_comments_form.html.erb
+++ b/app/views/comments/_comments_form.html.erb
@@ -6,7 +6,9 @@
     </tr>
     <tr>
       <td><%= simple_format(comment.comment_contents) %></td>
-      <td><%= link_to t('views.common.destroy'), [commentable, comment], method: :delete, data: { confirm: t('views.common.delete_confirm') } %></td>
+      <% if current_user.id == comment[:user_id] %>
+        <td><%= link_to t('views.common.destroy'), [commentable, comment], method: :delete, data: { confirm: t('views.common.delete_confirm') } %></td>
+      <% end %>
     </tr>
   <% end %>
 </table>
