--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [commentable, Comment.new], local: true) do |form| %>
+<%= form_with(model: [commentable, comment], local: true) do |form| %>
   <% if commentable.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(commentable.errors.count, "error") %> prohibited this commentable from being saved:</h2>
