--- a/app/views/comments/_comments_form.html.erb
+++ b/app/views/comments/_comments_form.html.erb
@@ -1,15 +1,19 @@
-<table>
-  <% @comments.each do |comment| %>
-    <tr>
-      <th align="left"><%= user_name_or_email(comment) %></th>
-      <th><%= l comment.updated_at, format: :long %></th>
-      <% if current_user.id == comment[:user_id] %>
-        <td><%= link_to t('views.common.edit'), edit_polymorphic_path([commentable, comment]) %></td>
-        <td><%= link_to t('views.common.destroy'), [commentable, comment], method: :delete, data: { confirm: t('views.common.delete_confirm') } %></td>
-      <% end %>
-    </tr>
-    <tr>
-      <td colspan="2"><%= simple_format(comment.comment_contents) %></td>
-    </tr>
-  <% end %>
-</table>
+<% if @comments.count.zero? %>
+  <p>まだコメントは登録されていません</p>
+<% else %>
+  <table>
+    <% @comments.each do |comment| %>
+      <tr>
+        <th align="left"><%= user_name_or_email(comment) %></th>
+        <th><%= l comment.updated_at, format: :long %></th>
+        <% if current_user.id == comment[:user_id] %>
+          <td><%= link_to t('views.common.edit'), edit_polymorphic_path([commentable, comment]) %></td>
+          <td><%= link_to t('views.common.destroy'), [commentable, comment], method: :delete, data: { confirm: t('views.common.delete_confirm') } %></td>
+        <% end %>
+      </tr>
+      <tr>
+        <td colspan="2"><%= simple_format(comment.comment_contents) %></td>
+      </tr>
+    <% end %>
+  </table>
+<% end %>
