[update] 日報、コメント共にバリテーションを追加

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label t('.title') %>
-    <%= form.text_area :comment_contents %>
+    <%= form.text_area :comment_contents, required: true %>
   </div>
 
   <div class="actions">
