--- a/app/views/comments/_comments_form.html.erb
+++ b/app/views/comments/_comments_form.html.erb
@@ -1,5 +1,5 @@
 <% if @comments.count.zero? %>
-  <p>まだコメントは登録されていません</p>
+  <p> <%= t('.not_comment') %> </p>
 <% else %>
   <table>
     <% @comments.each do |comment| %>
